<resources>
    <string name="app_name">Co Worker For Hour</string>
    <string name="welcome_to_co_worker_for_hour">Welcome to Co-Worker For Hour!!!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="register_me">Register Me</string>
    <string name="back_to_log_in">Back to Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>